--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ ul {
     height: 100px;
     width: 50%;
     text-align: center;
-    border: 2px solid grey;
+    border: 2px solid rgb(36, 36, 36);
 }
 span {
    display: table-cell;
@@ -34,9 +34,18 @@ span {
   
 }
 .links {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
     text-align: center;
 }
 .links-to-groups a {
     display: inline-block;
     color: #9d9d9d;
+}
+footer {
+    padding: 3px;
 }
