finished epp post

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -28,13 +28,13 @@ span {
   
 }
 .links {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: black;
-    color: white;
-    text-align: center;
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 .links-to-groups a {
     display: inline-block;
