--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,21 +28,15 @@ span {
    padding: 10px;
   
 }
-.links {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: black;
-    color: white;
-    text-align: center;
-  }
-  
-  footer {
-    padding: 3px;
-    padding-left: 3px;
-    padding-right: 3px;
-  }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
 .links-to-groups a {
     display: inline-block;
     color: #9d9d9d;
